[tool.poetry]
name = "audio-transcripts"
version = "0.1.0"
description = "Recursively transcribe audio files using Deepgram API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
deepgram-sdk = "^5.0.0"
python-dotenv = "^1.0.0"
anthropic = "^0.40.0"
openai = "^1.0.0"
google-cloud-aiplatform = "^1.50.0"
google-generativeai = "^0.8.0"

